// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`filterSectionsByName should recursively filter sections and components by name 1`] = `
[
  {
    "components": [],
    "name": "General",
    "sections": [
      {
        "components": [
          {
            "name": "Button",
          },
        ],
        "name": "Particles",
        "sections": [],
      },
    ],
  },
]
`;

exports[`filterSectionsByName should skip sections without matches inside 1`] = `
[
  {
    "components": [],
    "name": "General",
    "sections": [],
  },
]
`;
